--- a/FilmoSearch/appsettings.json
+++ b/FilmoSearch/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-9L1ED6K\\TEW_SQLEXPRESS;Initial Catalog=FilmoSearchDB; User Id=sa;Password=123; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MeetupAPI;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
