--- a/FilmoSearch/appsettings.json
+++ b/FilmoSearch/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MeetupAPI;Trusted_Connection=True"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FilmoSearchDB;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
